--- a/MusicOrganizer/Views/Artists/Index.cshtml
+++ b/MusicOrganizer/Views/Artists/Index.cshtml
@@ -16,4 +16,5 @@
   <h3><a href='/artists/@artist.Id'>@artist.Name</a></h3>
 }
 
+<p><a href='/artists/search_by_artist'>Search for artist</a></p>
 <p><a href='/'>Back home</a></p>
