--- a/MusicOrganizer/Views/Home/Index.cshtml
+++ b/MusicOrganizer/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
 <h1>Welcome to the Artist Collection!</h1>
 <h3><a href='/artists'>View Artist</a></h3>
 <h3><a href='/artists/new'>Add a new Artist</a></h3>
+<h3><a href='/artists/search_by_artist'>Search by Artist</a></h3>
